// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bind binds an external 1`] = `
"#version 450
#define TEST true

    vec4 _21_getColor() { return vec4(1.0, 0.0, 1.0, 1.0); }
    

    vec4 _21_getColor();
    
    vec4 colorUsed() { return vec4(0.0, 0.1, 0.2, 0.0); }
    vec4 colorNotUsed() { return vec4(0.0, 0.1, 0.2, 1.0); }

    vec4 getColor() {
      return _21_getColor() + colorUsed();
    }
    "
`;

exports[`bind binds an external 2`] = `
"#version 450

#define TEST true


    vec4 _21_getColor() { return vec4(1.0, 0.0, 1.0, 1.0); }
    

    vec4 _21_getColor();
    
    vec4 colorUsed() { return vec4(0.0, 0.1, 0.2, 0.0); }
    vec4 colorNotUsed() { return vec4(0.0, 0.1, 0.2, 1.0); }

    vec4 getColor() {
      return _21_getColor() + colorUsed();
    }
    "
`;

exports[`bind binds an external 3`] = `
"#version 450
#define TEST true

    vec4 _21_getColor() { return vec4(1.0, 0.0, 1.0, 1.0); }
    

    vec4 _21_getColor();
    
    vec4 _u0_colorUsed() { return vec4(0.0, 0.1, 0.2, 0.0); }
    vec4 _u0_getColor() {
      return _21_getColor() + _u0_colorUsed();
    }
    

    vec4 _u0_getColor();
    void main() {
      vec4 v;
      v.xyz = vec3(1.0, 0.0, 0.0);
      gl_FragColor = _u0_getColor();
    }
    "
`;

exports[`bind binds an external 4`] = `
"#version 450

#define TEST true


    vec4 _21_getColor() { return vec4(1.0, 0.0, 1.0, 1.0); }
    

    vec4 _21_getColor();
    
    vec4 _zh_colorUsed() { return vec4(0.0, 0.1, 0.2, 0.0); }
    vec4 _zh_getColor() {
      return _21_getColor() + _zh_colorUsed();
    }
    

    vec4 _zh_getColor();
    void main() {
      vec4 v;
      v.xyz = vec3(1.0, 0.0, 0.0);
      gl_FragColor = _zh_getColor();
    }
    "
`;
